Four 1) Addition of vector 2) Modified Allocator for vector

--- a/src/Makefile
+++ b/src/Makefile
@@ -51,6 +51,7 @@ LIBOBJECTS = \
 ./util/testutil.o \
 ./util/myhash.o \
 ./util/socket.o \
+./fs/vector.o \
 
 METADBOBJECTS = \
 ./metadb/metadb_fs.o \
