Addition of Leveldb C API 1) Changes in many files 2) C API in leveldb_adaptor

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-CC = gcc
-C = g++
+C = gcc
+CC = g++
 
 #-----------------------------------------------
 # Uncomment exactly one of the lines labelled (A), (B), and (C) below
